[package]
name = "continuation-router"
version = "1.1.1"
description = "Atomically routes a swap between multiple pools."
edition = "2021"
license = "AGPL-3.0"
authors = ["michaelhly <michaelhly@gmail.com>"]
homepage = "https://saber.so"
repository = "https://github.com/saber-hq/saber-periphery"
keywords = ["solana", "saber", "anchor"]

[lib]
crate-type = ["cdylib", "lib"]
name = "continuation_router"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = ">=0.22"
anchor-spl = ">=0.22"
vipers = "2.0.1"
spl-token = { version = "^3", features = ["no-entrypoint"] }
continuation-router-syn = { version = "^1.0", path = "./syn" }
num_enum = "0.5.6"
stable-swap-anchor = "1.7.3"
