[package]
name = "redeemer"
version = "1.0.6"
description = "Redeems Quarry IOU tokens for Saber tokens via the Saber mint proxy."
edition = "2021"
license = "AGPL-3.0"
authors = ["michaelhly <michaelhly@gmail.com>"]
homepage = "https://saber.so"
repository = "https://github.com/saber-hq/saber-periphery"
keywords = ["solana", "saber", "anchor"]

[lib]
crate-type = ["cdylib", "lib"]
name = "redeemer"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = ">=0.17"
anchor-spl = ">=0.17"
mint-proxy = { path = "../mint-proxy", version = "^1.0", features = ["cpi"] }
vipers = "1.5.5"
