[package]
name = "continuation-router-syn"
version = "1.1.1"
description = "Macros for generating the continuation router program."
edition = "2021"
license = "AGPL-3.0"
authors = ["michaelhly <michaelhly@gmail.com>"]
homepage = "https://saber.so"
repository = "https://github.com/saber-hq/saber-periphery"
keywords = ["solana", "saber", "anchor"]

[lib]
proc-macro = true

[dependencies]
anchor-lang = ">=0.22"
quote = "1.0"
syn = "1.0"
